# BuildBestPractices

./: CMakeLists.txt  create-package.cmake  git-version-runner.cmake  git-version.cmake  gitversion.h  main.cpp  mylib.cpp
gitversion/: FindGitVersion.cmake  GitVersion.cmake  _GitVersion.cmake
gitversion/include/: gitversion.h
mylib/: CMakeLists.txt  Config.cmake.in  mylib.h  version_file
